Source/WebCore/rendering/RenderLayerCompositor.h
@@ -110,9 +110,6 @@ public:
 
     bool canRender3DTransforms() const;
 
-    // Copy the accelerated compositing related flags from Settings
-    void cacheAcceleratedCompositingFlags();
-
     // Called when the layer hierarchy needs to be updated (compositing layers have been
     // created, destroyed or re-parented).
     void setCompositingLayersNeedRebuild(bool needRebuild = true);
@@ -360,7 +357,9 @@ private:
 
     void clearBackingForLayerIncludingDescendants(RenderLayer&);
 
-    // Repaint this and its child layers.
+    void cacheAcceleratedCompositingFlags();
+
+    // Repaint the given layer and its descendants.
     void recursiveRepaintLayer(RenderLayer&);
 
     void computeExtent(const OverlapMap&, const RenderLayer&, OverlapExtent&) const;
